[gd_scene load_steps=37 format=2]

[ext_resource path="res://actors/player/PlayerController.gd" type="Script" id=1]
[ext_resource path="res://actors/camera/ShakingCamera.tscn" type="PackedScene" id=2]
[ext_resource path="res://actors/hit_box/HitBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://actors/player/PlayerStateMachine.gd" type="Script" id=4]
[ext_resource path="res://actors/player/states/motion/on_ground/Idle.gd" type="Script" id=5]
[ext_resource path="res://actors/player/states/motion/on_ground/Move.gd" type="Script" id=6]
[ext_resource path="res://actors/player/states/motion/on_ground/BumpPlayer.gd" type="Script" id=7]
[ext_resource path="res://actors/player/states/Fall.gd" type="Script" id=8]
[ext_resource path="res://actors/player/states/motion/in_air/Jump.gd" type="Script" id=9]
[ext_resource path="res://actors/player/states/combat/Stagger.gd" type="Script" id=10]
[ext_resource path="res://actors/player/states/combat/Attack.gd" type="Script" id=11]
[ext_resource path="res://actors/player/states/Die.gd" type="Script" id=12]
[ext_resource path="res://actors/player/shadow.png" type="Texture" id=13]
[ext_resource path="res://actors/weapons/sword/WeaponPivot.gd" type="Script" id=14]
[ext_resource path="res://actors/weapons/sword/Sword.tscn" type="PackedScene" id=15]
[ext_resource path="res://actors/player/body.png" type="Texture" id=16]
[ext_resource path="res://interface/fonts/SourceCodePro-Bold.ttf" type="DynamicFontData" id=17]
[ext_resource path="res://actors/player/states/debug/StateNameDisplayer.gd" type="Script" id=18]
[ext_resource path="res://actors/health/Stats.tscn" type="PackedScene" id=19]
[ext_resource path="res://core/shop/purse/Purse.tscn" type="PackedScene" id=20]
[ext_resource path="res://core/inventory/Inventory.tscn" type="PackedScene" id=21]
[ext_resource path="res://core/inventory/items/usable/potions/restore_health/MinorHealthPotion.tscn" type="PackedScene" id=22]
[ext_resource path="res://core/inventory/items/usable/potions/restore_health/StrongHealthPotion.tscn" type="PackedScene" id=23]
[ext_resource path="res://actors/weapons/bullet/BulletSpawner.gd" type="Script" id=24]
[ext_resource path="res://audio/sfx/step_01.wav" type="AudioStream" id=25]
[ext_resource path="res://audio/AudioShuffleStepSounds.gd" type="Script" id=26]
[ext_resource path="res://actors/CoinsCollector.tscn" type="PackedScene" id=27]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 31.3139

[sub_resource type="Animation" id=2]

resource_name = "SETUP"
length = 0.01
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -58.8242 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodyPivot/Body:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BodyPivot/Body:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Shadow:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Shadow:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("BodyPivot:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("BodyPivot:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]

resource_name = "bump"
length = 0.2
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 0.466516, 1, 0.466516 ),
"update": 0,
"values": [ Vector2( 0, -58.8242 ), Vector2( 0, -100 ), Vector2( 0, -58.8242 ) ]
}

[sub_resource type="Animation" id=4]

resource_name = "die"
length = 0.6
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodyPivot:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 0.326562, 0.326562, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Shadow:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 0.27991, 0.27991, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 0.275362, 0.275362 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Shadow:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=5]

length = 1.1
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 1.1 ),
"transitions": PoolRealArray( 1, 0, 1 ),
"update": 0,
"values": [ Vector2( 0, -58.8242 ), Vector2( 0, 20 ), Vector2( 0, -58.8242 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodyPivot/Body:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 1.1 ),
"transitions": PoolRealArray( 1, 0, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.0163307, 0.0163307 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Shadow:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.15, 1.1 ),
"transitions": PoolRealArray( 1, 0, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BodyPivot/Body:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3, 1.1 ),
"transitions": PoolRealArray( 1, 0, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.175781, 0.175781, 0.175781, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]

length = 0.01
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 0.466516 ),
"update": 0,
"values": [ Vector2( 0, -58.8242 ) ]
}

[sub_resource type="Animation" id=7]

length = 0.6
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=8]

length = 0.3
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 0.466516, 1.86089 ),
"update": 0,
"values": [ Vector2( 0, -58.8242 ), Vector2( 0, -75.549 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("Sfx/Steps")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "play_random"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("StateMachine/Move")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "spawn_dust"
} ]
}

[sub_resource type="DynamicFont" id=9]

size = 20
use_mipmaps = false
use_filter = true
font_data = ExtResource( 17 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="Player" type="KinematicBody2D" index="0"]

position = Vector2( 960, 550 )
input_pickable = false
collision_layer = 1
collision_mask = 3
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Transform", "Visibility" ]
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="ShakingCamera" parent="." index="0" instance=ExtResource( 2 )]

[node name="HitBox" parent="." index="1" instance=ExtResource( 3 )]

monitorable = true

[node name="CollisionShape2D" parent="HitBox" index="0"]

shape = SubResource( 1 )

[node name="StateMachine" type="Node" parent="." index="2"]

script = ExtResource( 4 )
active = false

[node name="Idle" type="Node" parent="StateMachine" index="0"]

script = ExtResource( 5 )

[node name="Move" type="Node" parent="StateMachine" index="1"]

script = ExtResource( 6 )
MAX_WALK_SPEED = 450
MAX_RUN_SPEED = 700

[node name="Bump" type="Node" parent="StateMachine" index="2"]

script = ExtResource( 7 )
SPEED = 240.0

[node name="Fall" type="Node" parent="StateMachine" index="3"]

script = ExtResource( 8 )

[node name="Jump" type="Node" parent="StateMachine" index="4"]

script = ExtResource( 9 )
BASE_MAX_HORIZONTAL_SPEED = 400.0
AIR_ACCELERATION = 1000.0
AIR_DECCELERATION = 2000.0
AIR_STEERING_POWER = 50.0
JUMP_HEIGHT = 120.0
JUMP_DURATION = 0.8
GRAVITY = 1600.0

[node name="Stagger" type="Node" parent="StateMachine" index="5"]

script = ExtResource( 10 )

[node name="Attack" type="Node" parent="StateMachine" index="6"]

script = ExtResource( 11 )

[node name="Die" type="Node" parent="StateMachine" index="7"]

script = ExtResource( 12 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="3"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/SETUP = SubResource( 2 )
anims/bump = SubResource( 3 )
anims/die = SubResource( 4 )
anims/fall = SubResource( 5 )
anims/idle = SubResource( 6 )
anims/stagger = SubResource( 7 )
anims/walk = SubResource( 8 )
blend_times = [  ]

[node name="Shadow" type="Sprite" parent="." index="4"]

self_modulate = Color( 1, 1, 1, 0.361098 )
position = Vector2( 0.362319, -4 )
texture = ExtResource( 13 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="BodyPivot" type="Position2D" parent="." index="5"]

_sections_unfolded = [ "Material", "Transform", "Visibility" ]

[node name="WeaponPivot" type="Position2D" parent="BodyPivot" index="0"]

position = Vector2( 0, -62 )
script = ExtResource( 14 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="Offset" type="Position2D" parent="BodyPivot/WeaponPivot" index="0"]

position = Vector2( 110, 0 )

[node name="Sword" parent="BodyPivot/WeaponPivot/Offset" index="0" instance=ExtResource( 15 )]

[node name="Body" type="Sprite" parent="BodyPivot" index="1"]

position = Vector2( 0, -58.8242 )
texture = ExtResource( 16 )
_sections_unfolded = [ "Visibility" ]

[node name="StateNameDisplayer" type="Label" parent="BodyPivot" index="2"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -109.0
margin_top = -172.0
margin_right = 110.0
margin_bottom = -138.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 9 )
text = "Test"
align = 1
valign = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script = ExtResource( 18 )
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="." index="6"]

build_mode = 0
polygon = PoolVector2Array( -20, 0, -20, -20, 20, -20, 20, 0 )

[node name="Health" parent="." index="7" instance=ExtResource( 19 )]

[node name="Purse" parent="." index="8" instance=ExtResource( 20 )]

coins = 32
MAXIMUM = 1000000

[node name="Inventory" parent="." index="9" instance=ExtResource( 21 )]

[node name="MinorHealthPotion" parent="Inventory" index="0" instance=ExtResource( 22 )]

amount = 4

[node name="StrongHealthPotion" parent="Inventory" index="1" instance=ExtResource( 23 )]

[node name="BulletSpawn" type="Node2D" parent="." index="10"]

position = Vector2( 1.17401, -61.266 )
script = ExtResource( 24 )
_sections_unfolded = [ "Transform" ]

[node name="CooldownTimer" type="Timer" parent="BulletSpawn" index="0"]

process_mode = 1
wait_time = 0.2
one_shot = true
autostart = false

[node name="Sfx" type="Node" parent="." index="11"]

[node name="Steps" type="AudioStreamPlayer" parent="Sfx" index="0"]

stream = ExtResource( 25 )
volume_db = -16.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"
script = ExtResource( 26 )

[node name="CoinsCollector" parent="." index="12" instance=ExtResource( 27 )]

[connection signal="direction_changed" from="." to="BodyPivot/WeaponPivot" method="_on_Player_direction_changed"]

[connection signal="state_changed" from="StateMachine" to="BodyPivot/StateNameDisplayer" method="_on_StateMachine_state_changed"]

[connection signal="last_moved" from="StateMachine/Move" to="StateMachine/Bump" method="_on_Move_last_moved"]

[connection signal="finished" from="StateMachine/Die" to="." method="_on_Die_finished"]

[connection signal="animation_finished" from="AnimationPlayer" to="StateMachine" method="_on_animation_finished"]

[connection signal="combo_finished" from="BodyPivot/WeaponPivot/Offset/Sword" to="StateMachine/Attack" method="_on_Sword_combo_finished"]

[connection signal="damage_taken" from="Health" to="StateMachine" method="_on_Health_damage_taken"]

[connection signal="health_depleted" from="Health" to="StateMachine" method="_on_Health_health_depleted"]

[connection signal="coins_received" from="CoinsCollector" to="Purse" method="add_coins"]


[editable path="HitBox"]
